# dj-blockchainprocessor

./: .env  .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
blockchain/: models.py  tasks.py
blockchain/migrations/: 0001_initial.py  0002_block_blockchain_configmonitorblock_task_and_more.py  0003_block_logs_bloom_block_receipts_root.py  0004_confignode_chain_id_confignode_network_id_and_more.py
blockchain/tests/: test_process_block.py
blockchainprocessor/: asgi.py  celery.py  urls.py  wsgi.py
blockchainprocessor/settings/: __init__.py  base.py  celery.py  dev.py  env.py  local.py  prod.py
lib/services/: processor.py  types.py
lib/tests/: test_services_processor.py
tests/: conftest.py  test_celery_env.py
