[tool.poetry]
name = "blockchainprocessor"
version = "0.1.0"
description = "Platform to facilitating manage blockchain, process tx and set tasks based on proof"
authors = ["gdomanowski <gabrieldomanowski@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.4"
celery = {extras = ["redis"], version = "^5.3.6"}
psycopg2-binary = "^2.9.9"

Django = "^5.0.6"
django-redis = "^5.4.0"
djangorestframework = "^3.15.1"
django-allauth = "^0.63.2"
environ = "^1.0"
django-environ = "^0.11.2"
web3 = {extras = ["tester"], version = "^6.19.0"}
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.7"
py-evm = "^0.10.1b1"
django-celery-beat = "^2.6.0"
gevent = "^24.2.1"
pytest-celery = {extras = ["redis"], version = "^1.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "test_*.py"
DJANGO_SETTINGS_MODULE = "blockchainprocessor.settings"

adopts = "--ds=blockchainprocessor.settings --reuse-db"
